# Fast_Zero_Hero

./: .gitignore  LICENSE  README.md  pyproject.toml
fast_zero_hero/: app.py  schemas.py
tests/: test_app.py
